Adjust and streamline login process differences between web and rest api
