# settings/routes.php
@@ -202,7 +202,7 @@ function addApiRoutes(RouterService $routerService, FastRoute\RouteCollector $ro
     $routes = RouteList::create();
 
     $routes->add('GET', '/openapi', [Api\OpenApiController::class, 'getSchema']);
-    $routes->add('POST', '/authentication/request-token', [Api\AuthenticationController::class, 'requestToken']);
+    $routes->add('POST', '/authentication/create-token', [Api\AuthenticationController::class, 'createToken']);
 
     $routeUserHistory = '/users/{username:[a-zA-Z0-9]+}/history/movies';
     $routes->add('GET', $routeUserHistory, [Api\HistoryController::class, 'getHistory'], [Api\Middleware\IsAuthorizedToReadUserData::class]);
